Key method in code and OAS
